# SelfCalibratingConformal

./: ()  ()!  .Rhistory  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Evalsims.Rmd  LICENSE  MANIFEST.in  NAMESPACE  README.md  advanced_customization.ipynb  latex_table_bike_True.txt  mkdocs.yml  plot_curves.Rmd  pyproject.toml  quickstart_quantile_cp.ipynb  quickstart_regression.ipynb  setup.py  simCalibration.Rmd  sims_1000_Lrnr_gam_NULL_NULL_GCV.Cp_2_0.05_1.csv  sims_1000_Lrnr_gam_NULL_NULL_GCV.Cp_2_0.05_2.csv  sims_1000_Lrnr_gam_NULL_NULL_GCV.Cp_2_0.05_3.csv  sims_1000_Lrnr_gam_NULL_NULL_GCV.Cp_2_0.05_4.csv  vignette.ipynb
.ipynb_checkpoints/: MANIFEST-checkpoint.in  experiments-checkpoint.ipynb  setup-checkpoint.py  vignette-checkpoint.ipynb
R/: conformal.R  isoreg.R
R_package/: DESCRIPTION
SelfCalibratedConformal/: SelfCalibratedConformalPredictor.py  _init__.py  calibrators.py  utils.py
SelfCalibratedConformal.egg-info/: PKG-INFO  SOURCES.txt
SelfCalibratingConformal/: SelfCalibratingConformalPredictor.py  __init__.py  _init__.py
SelfCalibratingConformal.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
data_analysis/: competitors.py  condconf.py  data_analysis.py  data_analysis_utils.py  example_meps_21.csv  experiments.ipynb
datasets/: datasets.py  rebuttal.md
docs/: 404.html  api.md  guides.md  index.html  index.md  sitemap.xml
docs_src/: index.md
man/: isoreg_with_xgboost.Rd
myenv/: pyvenv.cfg
plots/: curves_1000_0.5.csv  curves_100_0.5.csv  curves_250_0.5.csv  curves_300_0.5.csv  curves_500_0.5.csv  curves_50_0.5.csv
results/: sims_1000_gam_10_0.1_1_1.csv  sims_1000_gam_10_0.1_1_2.csv  sims_1000_gam_10_0.1_2_1.csv  sims_1000_gam_10_0.1_2_2.csv  sims_1000_gam_10_0.1_3_1.csv  sims_1000_gam_10_0.1_3_2.csv  sims_1000_gam_10_0.1_4_1.csv  sims_1000_gam_10_0.1_4_2.csv  sims_1000_gam_1_0.1_1_1.csv  sims_1000_gam_1_0.1_1_2.csv  sims_1000_gam_1_0.1_2_1.csv  sims_1000_gam_1_0.1_2_2.csv  sims_1000_gam_1_0.1_3_1.csv  sims_1000_gam_1_0.1_3_2.csv  sims_1000_gam_1_0.1_4_1.csv  sims_1000_gam_1_0.1_4_2.csv  sims_1000_gam_2_0.1_1_1.csv  sims_1000_gam_2_0.1_1_2.csv  sims_1000_gam_2_0.1_2_1.csv  sims_1000_gam_2_0.1_2_2.csv  (+525 more)
(+1733 files in other folders)
